Interface files Query, Command and Post are created for defining a function rule in service classes. Query is for GET services, Command is for PUT and DELETE services, Post is for POST services.
Fixed: ReminderDialog being wide asf because the BoxLayout of daysPanel.

Changed name of CreateUpdateTaskWindow to Task window and name of CreateUpdateProjectWindow to ProjectWindow.

Fixed: TaskWindow not having the max text length policy. Also created DocumentFilterFactory class for cleaner code in both TaskWindow and ProjectWindow.